# BlueGamepad

./: .gitignore  CMakeLists.txt  Makefile  README.md  sdkconfig
components/Common/: Buttons.cpp  CMakeLists.txt  Controller.cpp  GPIOs.cpp  Josticks.cpp  Joysticks.cpp  LED.cpp
components/Common/include/: Buttons.h  Controller.h  GPIOs.h  Josticks.h  Joysticks.h  LED.h  Parameters.h
components/ESP32-BLE-Gamepad/: BleGamepad.cpp  BleGamepad_main.cpp  CMakeLists.txt
components/ESP32-BLE-Gamepad/include/: BleGamepadConfiguration.h  BleGamepad_main.h
components/HOJA-LIB-ESP32/: CMakeLists.txt  hoja_frontend.c  hoja_main.c
components/HOJA-LIB-ESP32/include/: hoja_backend.h  hoja_main.h
components/HOJA-LIB-ESP32/utilities/: util_bt_hid.c
components/esp-nimble-component/: CMakeLists.txt  Kconfig  README.md  component.mk
components/esp-nimble-cpp/: CMakeLists.txt  CMakeLists.txt_idf3
components/esp-nimble-cpp/src/: NimBLEDevice.cpp  NimBLEHIDDevice.cpp  NimBLEHIDDevice.h
components/retroblue_api/: CMakeLists.txt  rbc_switch_comms.cpp  rbc_switch_controller.cpp  rbc_switch_core.cpp  rbc_switch_input.cpp  rbc_switch_reports.cpp  rbc_switch_spi.cpp  retroblue_api.cpp  retroblue_backend.cpp  retroblue_main.cpp  retroblue_settings.cpp
components/retroblue_api/include/: rbc_err.h  rbc_switch_comms.h  rbc_switch_controller.h  rbc_switch_core.h  rbc_switch_input.h  rbc_switch_reports.h  rbc_switch_spi.h  retroblue_api.h  retroblue_backend.h  retroblue_main.h  retroblue_settings.h
main/: CMakeLists.txt  main.cpp
main/include/: main.h
(+4 files in other folders)
